// Copyright (c) 2019-2020 The Zcash developers
// Distributed under the MIT software license

syntax = "proto3";
package cash.z.wallet.sdk.rpc;

option go_package = "walletrpc";

// CompactBlock is a packaging of ONLY the data from a block that's needed to:
//   1. Detect a payment to your shielded Sapling address
//   2. Detect a spend of your shielded Sapling notes
//   3. Update your witnesses to generate new Sapling spend proofs.
message CompactBlock {
    uint32 protoVersion = 1;
    uint64 height = 2;
    bytes hash = 3;
    bytes prevHash = 4;
    uint32 time = 5;
    bytes header = 6;
    repeated CompactTx vtx = 7;
}

// CompactTx contains the minimum information for a wallet to know if
// this transaction is relevant to it (either pays to it or spends from it).
message CompactTx {
    uint64 index = 1;
    bytes hash = 2;
    uint32 fee = 3;
    repeated CompactSaplingSpend spends = 4;
    repeated CompactSaplingOutput outputs = 5;
    repeated CompactOrchardAction actions = 6;
}

// CompactSaplingSpend is a Sapling Spend Description as described in 7.3 of
// the Zcash protocol specification.
message CompactSaplingSpend {
    bytes nf = 1;
}

// CompactSaplingOutput is a Sapling Output Description as described in
// section 7.4 of the Zcash protocol spec.
message CompactSaplingOutput {
    bytes cmu = 1;
    bytes ephemeralKey = 2;
    bytes ciphertext = 3;
}

// CompactOrchardAction is an Orchard Action as described in section 7.5 of
// the Zcash protocol spec.
message CompactOrchardAction {
    bytes nullifier = 1;
    bytes cmx = 2;
    bytes ephemeralKey = 3;
    bytes ciphertext = 4;
}

