// Copyright (c) 2019-2020 The Zcash developers
// Distributed under the MIT software license

syntax = "proto3";
package cash.z.wallet.sdk.rpc;

option go_package = "walletrpc";

import "compact_formats.proto";

// A BlockID message contains identifiers to select a block: a height or a hash.
message BlockID {
    uint64 height = 1;
    bytes hash = 2;
}

// BlockRange specifies a series of blocks from start to end inclusive.
message BlockRange {
    BlockID start = 1;
    BlockID end = 2;
}

// A TxFilter contains the information needed to identify a particular transaction
message TxFilter {
    BlockID block = 1;
    uint64 index = 2;
    bytes hash = 3;
}

// RawTransaction contains the complete transaction data.
message RawTransaction {
    bytes data = 1;
    uint64 height = 2;
}

// A SendResponse encodes an error code and a string.
message SendResponse {
    int32 errorCode = 1;
    string errorMessage = 2;
}

// Chainspec is a placeholder to allow specification of a particular chain fork.
message ChainSpec {}

// Empty is for gRPCs that take no arguments.
message Empty {}

// LightdInfo returns various information about this lightwalletd instance.
message LightdInfo {
    string version = 1;
    string vendor = 2;
    bool taddrSupport = 3;
    string chainName = 4;
    uint64 saplingActivationHeight = 5;
    string consensusBranchId = 6;
    uint64 blockHeight = 7;
    string gitCommit = 8;
    string branch = 9;
    string buildDate = 10;
    string buildUser = 11;
    uint64 estimatedHeight = 12;
    string zcashdBuild = 13;
    string zcashdSubversion = 14;
}

// TransparentAddressBlockFilter restricts the results to the given address
message TransparentAddressBlockFilter {
    string address = 1;
    BlockRange range = 2;
}

// Duration is currently unused.
message Duration {
    int64 intervalUs = 1;
}

// PingResponse is used to indicate concurrency of lightwalletd.
message PingResponse {
    int64 entry = 1;
    int64 exit = 2;
}

// Address is a wrapper around a string.
message Address {
    string address = 1;
}

// AddressList is a list of addresses.
message AddressList {
    repeated string addresses = 1;
}

// Balance contains a single account's balance.
message Balance {
    int64 valueZat = 1;
}

// Exclude is a list of transaction hashes to exclude.
message Exclude {
    repeated bytes txid = 1;
}

// The TreeState is derived from the Zcash z_gettreestate rpc.
message TreeState {
    string network = 1;
    uint64 height = 2;
    string hash = 3;
    uint32 time = 4;
    string saplingTree = 5;
    string orchardTree = 6;
}

// GetAddressUtxosArg contains arguments for GetAddressUtxos.
message GetAddressUtxosArg {
    repeated string addresses = 1;
    uint64 startHeight = 2;
    uint32 maxEntries = 3;
}

// GetAddressUtxosReply contains a list of Utxos.
message GetAddressUtxosReply {
    string address = 1;
    bytes txid = 2;
    int32 index = 3;
    bytes script = 4;
    int64 valueZat = 5;
    uint64 height = 6;
}

// GetAddressUtxosReplyList contains a list of GetAddressUtxosReply.
message GetAddressUtxosReplyList {
    repeated GetAddressUtxosReply addressUtxos = 1;
}

// CompactTxStreamer exposes a gRPC streaming interface.
service CompactTxStreamer {
    // Return the height of the tip of the best chain.
    rpc GetLatestBlock(ChainSpec) returns (BlockID) {}
    // Return the compact block corresponding to the given block identifier.
    rpc GetBlock(BlockID) returns (CompactBlock) {}
    // Return a list of consecutive compact blocks.
    rpc GetBlockRange(BlockRange) returns (stream CompactBlock) {}

    // Return the requested full (not compact) transaction.
    rpc GetTransaction(TxFilter) returns (RawTransaction) {}
    // Submit the given transaction to the Zcash network.
    rpc SendTransaction(RawTransaction) returns (SendResponse) {}

    // Return the txids corresponding to the given t-address.
    rpc GetTaddressTxids(TransparentAddressBlockFilter) returns (stream RawTransaction) {}
    rpc GetTaddressBalance(AddressList) returns (Balance) {}
    rpc GetTaddressBalanceStream(stream Address) returns (Balance) {}

    // Return the compact transactions currently in the mempool.
    rpc GetMempoolTx(Exclude) returns (stream CompactTx) {}
    rpc GetMempoolStream(Empty) returns (stream RawTransaction) {}

    // GetTreeState returns the note commitment tree state.
    rpc GetTreeState(BlockID) returns (TreeState) {}

    rpc GetAddressUtxos(GetAddressUtxosArg) returns (GetAddressUtxosReplyList) {}
    rpc GetAddressUtxosStream(GetAddressUtxosArg) returns (stream GetAddressUtxosReply) {}

    // Return information about this lightwalletd instance.
    rpc GetLightdInfo(Empty) returns (LightdInfo) {}
    // Testing-only, requires lightwalletd --ping-very-insecure.
    rpc Ping(Duration) returns (PingResponse) {}
}


